# task-manager-mcp

./: .gitignore  .roomodes  README.md  README.zh_CN.md  dev.sh  main.py  pyproject.toml
docs/: TaskTreeExample.md
logger/: __init__.py
models/: __init__.py  metadata.py  task.py  utils.py
server/: __init__.py  mcp.py  tools.py
tests/test_models/: __init__.py  test_manager.py  test_metadata.py  test_task.py
tests/test_server/: test_tools.py
