[project]
name = "task-manager-mcp"
version = "0.1.0"
description = "Task Manager MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.5.0"
]

[project.optional-dependencies]
test = [
    "pytest-cov>=3.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv.workspace]
members = ["tt"]
